--- a/my-index.html
+++ b/my-index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-    <title>Custom template</title>
+    <title>{%= o.htmlWebpackPlugin.options.title %}</title>
   </head>
   <body>
     <div id='content'></div>
-  <script src="index_bundle.js"></script></body>
+  </body>
 </html>
