--- a/my-index.html
+++ b/my-index.html
@@ -3,9 +3,11 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
     <title>{%= o.htmlWebpackPlugin.options.title %}</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id='content'></div>
     <div id='sudokuboard'></div>
+    <div id='sudokucell'></div>
   </body>
 </html>
